# nexum-shield

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  .gitignore  pyproject.toml  start.py
backend/app/: main.py
backend/app/api/: health.py  ingest.py  jobs.py
backend/app/core/: config.py  content_registry.py  event_store.py  job_store.py  observation_store.py  propagation_graph.py  queue.py
backend/app/engines/: confidence_engine.py  decision_engine.py  embedding_engine.py  enforcement_engine.py  fingerprint_engine.py  matching_engine.py  scoring_engine.py
backend/app/models/: confidence_models.py  decision_models.py  ingest.py  job.py
backend/app/services/: reference_store.py
backend/app/services/llm/: __init__.py  base.py  exceptions.py  factory.py  metrics.py  schemas.py
backend/app/services/llm/orchestration/: cache.py  cost.py  deadline.py  exceptions.py  fallback.py  guardrails.py  metrics.py  rate_limit.py  router.py  schemas.py  time_source.py
backend/app/services/llm/providers/: __init__.py  gemini.py
backend/app/workers/: pipeline_worker.py  worker.py
frontend/: .env.example  .gitignore
