[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.27",
    "imagehash>=4.3.1",
    "jsonschema>=4.21",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "pillow>=10.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "redis>=5.0",
    "rq>=1.16",
    "tenacity>=8.0",
    "uvicorn>=0.46.0",
]
